tabs improvement, undo merge

--- a/src/example/index.html
+++ b/src/example/index.html
@@ -25,6 +25,7 @@
   <div class="container" id="listmerger">
     
     <div class="mergelist">
+      <p>Merged List</p>
       <div class="zone" data-role="zone" id="mlist">
         <!-- <div data-role="finding" id="fin10" class="element" draggable="true">Finding 10</div> -->
       </div>
