redo merge and css improvements

--- a/src/example/index.html
+++ b/src/example/index.html
@@ -14,10 +14,12 @@
 
   <dialog>
     <p>Do you want to merge these findings<span id="mergeplaceholder"></span>?</p>
+    <form>
     <p>New title: <input name="newtitle"></p>
-    <button href="#" id="mergebutton">Merge</button>
+    <button href="#" id="mergebutton" type="submit">Merge</button>
     <button id="closebutton">Close</button>
-  </dialog>
+  </form>
+  </dialog> 
 
   <button id="undo" disabled>‹‹ Undo</button>
   <button id="redo" disabled>Redo ››</button>
